--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="info-icon-card" data-info="info-1">
                     <img src="https://assets.codepen.io/4417856/acident.png" alt="Symptome">
                     <h3>Symptome</h3>
-                    <p class="hidden-info">
+                    <ul class="hidden-info">
                         <li>Verzögerte oder fehlende Pubertät</li>
                         <li>Beeinträchtigter Geruchssinn</li>
                         <li>Andere hormonelle Defizite</li>
@@ -45,29 +45,29 @@
                         <li>Geringe Knochendichte</li>
                         <li>Geringe Muskelmasse</li>
                         <li>Verlust des Geschmackssinns</li>
-                    </p>
+                    </ul>
                 </div>
                 <div class="info-icon-card" data-info="info-2">
                     <img src="https://assets.codepen.io/4417856/dollar.png" alt="Ursachen">
                     <h3>Ursachen</h3>
-                    <p class="hidden-info">
+                    <ul class="hidden-info">
                         <li>Genetische Mutationen</li>
                         <li>Hormonelle Ungleichgewichte</li>
                         <li>Störungen in der Entwicklung des Hypothalamus</li>
                         <li>Erbliche Faktoren</li>
                         <li>Umweltfaktoren</li>
-                    </p>
+                    </ul>
                 </div>
                 <div class="info-icon-card" data-info="info-3">
                     <img src="https://assets.codepen.io/4417856/speedomater.png" alt="Diagnose">
                     <h3>Diagnose</h3>
-                    <p class="hidden-info">
+                    <ul class="hidden-info">
                         <li>Klinische Bewertung</li>
                         <li>Hormonuntersuchungen</li>
                         <li>Genetische Tests</li>
                         <li>Bildgebende Verfahren</li>
                         <li>Familienanamnese</li>
-                    </p>
+                    </ul>
                 </div>
             </div>
 
